--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,114 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	margin: 0;
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+		'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+		sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	background-color: #faeee7;
+	text-align: center;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+		monospace;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+	margin: 0;
+	padding: 0;
+}
+ul {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+a {
+	text-decoration: none;
+}
+img {
+	display: block;
+}
+main {
+	padding: 50px 60px;
+}
+div.backBtn {
+	width: 100px;
+	background-color: #f4f4f4;
+	transition: all 0.4s ease;
+	position: relative;
+	cursor: pointer;
+}
+
+span.line {
+	bottom: auto;
+	right: auto;
+	top: auto;
+	left: auto;
+	background-color: #333;
+	border-radius: 10px;
+	width: 100%;
+	left: 0px;
+	height: 2px;
+	display: block;
+	position: absolute;
+	transition: width 0.2s ease 0.1s, left 0.2s ease, transform 0.2s ease 0.3s,
+		background-color 0.2s ease;
+}
+
+span.tLine {
+	top: 0px;
+}
+
+span.mLine {
+	top: 13px;
+	opacity: 0;
+}
+
+span.bLine {
+	top: 26px;
+}
+
+.label {
+	position: absolute;
+	left: 0px;
+	top: 5px;
+	width: 100%;
+	text-align: center;
+	transition: all 0.4s ease;
+	font-size: 1em;
+}
+
+div.backBtn:hover span.label {
+	left: 25px;
+}
+
+div.backBtn:hover span.line {
+	left: -10px;
+	height: 5px;
+	background-color: #ff8ba7;
+}
+
+div.backBtn:hover span.tLine {
+	width: 25px;
+	transform: rotate(-45deg);
+	left: -15px;
+	top: 6px;
+}
+
+div.backBtn:hover span.mLine {
+	opacity: 1;
+	width: 30px;
+}
+
+div.backBtn:hover span.bLine {
+	width: 25px;
+	transform: rotate(45deg);
+	left: -15px;
+	top: 20px;
 }
